--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.12",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
